<resources>
    <string name="app_name">韩知韩语</string>
    <!-- PLEASE KEEP THIS App ID IN SAFE PLACE -->
    <!-- Get your own App ID at https://dashboard.agora.io/ -->
    <!-- After you entered the App ID, remove <##> outside of Your App ID -->
    <string name="agora_app_id">57620370175c4227983472e352e6c0a8</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="agora_access_token"></string>
    <!--页面标题-->
    <string name="title_teacher_detail">师资详情</string>
    <string name="title_select_time">选择时间</string>
    <string name="title_select_teacher">选择教师</string>
    <string name="title_select_class">选择课程</string>
    <string name="title_class_detail">课程详情</string>
    <string name="title_service_agreement">用户服务协议</string>
    <string name="title_change_password">更改密码</string>
    <string name="title_contact">联系助教</string>
    <string name="title_about">关于韩知</string>
    <string name="title_class_apply">申请</string>
    <string name="title_mine">我的</string>
    <string name="title_wallet">钱包</string>
    <!--教师镶嵌-->
    <string name="teacher_detail_table_time">选择时间</string>
    <string name="teacher_detail_table_appraise">学生评价</string>
    <!--课程详情-->
    <string name="class_detail_submit">确认课程</string>
    <!--预约时间-->
    <string name="appointment_time_no_checked_tips">请选择上课时间</string>
    <string name="appointment_time_submit">确认时间</string>
    <string name="appointment_time_affirm">选择的上课时间以北京时间为准，\n是否继续？</string>
    <string name="clear_cache">清理缓存后,部分界面下次加载时间会变长,是否确认清理？</string>
    <string name="set_appointment_time_affirm">本次编辑的上课时间有效期为5周,如需变动时间请随时自行调整，\n是否继续？</string>
    <string name="appointment_time_reelect">重新选择</string>
    <!--课程申请-->
    <string name="class_apply_tips_title">注意事项</string>
    <string name="class_apply_submit">确认申请</string>
    <string name="class_apply_table_title">课程申请表</string>
    <string name="class_apply_table_copyright">韩知</string>
    <string name="class_apply_residue_num" formatted="false">剩余%d次</string>
    <string name="class_apply_use_info">使用此券 * 1</string>
    <!--我的课程-->
    <string name="my_class_have_apply">已申请</string>
    <string name="my_class_have_class">已上课</string>
    <string name="my_class_reapply">重新申请</string>
    <string name="my_class_join">开始上课</string>
    <string name="my_class_cancel">取消课程</string>
    <string name="my_class_confirm">确认课程</string>
    <string name="my_class_review">复习课程</string>
    <string name="my_class_tips_affirm">确认</string>
    <string name="my_class_appraise_submit">提交</string>
    <string name="my_class_appraise_title">请为本次外教满意度打分</string>
    <!--我的-->
    <string name="mine_table_my_class">我的课程</string>
    <string name="mine_table_collect_teacher">收藏老师</string>
    <string name="mine_table_class_statistics">课程统计</string>
    <string name="mine_table_class_time">上课时间</string>
    <string name="mine_table_my_profile">我的资料</string>
    <string name="mine_table_my_wallet">我的钱包</string>
    <!--钱包-->
    <string name="wallet_connect_us">联系助教</string>
    <string name="wallet_weichat_1" formatted="false">助教微信1号：%s</string>
    <string name="wallet_weichat_2" formatted="false">助教微信2号：%s</string>
    <string name="wallet_phone" formatted="false">在线电话：%s</string>
    <string name="wallet_web_url" formatted="false">官网：%s</string>
    <string name="wallet_close">关闭</string>
    <string name="wallet_to_weichat_affirm">确认</string>
    <string name="wallet_to_weichat_cancel">取消</string>
    <string name="wallet_to_weichat_tips">助教微信号已复制，前往微信搜索并添加助教</string>
    <string name="wallet_to_weichat_no_install">检查到您手机没有安装微信，请安装后使用该功能</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">韩知小助手</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_tab_teacher">外教</string>
    <string name="main_tab_mine">我的</string>
    <string name="menu_home">我的课程</string>
    <string name="menu_gallery">收藏老师</string>
    <string name="menu_slideshow">我的资料</string>
    <string name="title_activity_login">登录</string>
    <string name="input_loginphone">手机号登录</string>
    <string name="input_password">登录密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--其他-->
    <string name="dialog_title">提示</string>
</resources>
