<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_8"
    android:background="@drawable/rectangle_round_corner6_light_blue"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_teacher_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/text_color_66"
        android:textSize="@dimen/sp_18"
        tools:text="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_head_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/dp_16"
            android:src="@drawable/hanzhilogo" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_head_img"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/text_color_33"
            android:textSize="@dimen/sp_18"
            tools:text="@string/app_name" />

        <RelativeLayout
            android:id="@+id/rl_class_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_toRightOf="@+id/iv_head_img">

            <TextView
                android:id="@+id/tv_class_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_color_99"
                android:textSize="@dimen/sp_14"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_class_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_class_date"
                android:textColor="@color/text_color_33"
                android:textSize="@dimen/sp_14"
                tools:text="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_class_lay"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_toRightOf="@+id/iv_head_img"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_class_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_color_99"
                android:textSize="@dimen/sp_14"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_teacher_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_class_time"
                android:textColor="@color/text_color_99"
                android:textSize="@dimen/sp_14"
                tools:text="@string/app_name" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_16"
            android:background="@drawable/rectangle_round_corner3_dark_blue"
            android:text="@string/my_class_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_reapply"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/rectangle_round_corner3_dark_blue"
            android:text="@string/my_class_reapply"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_review"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_16"
            android:background="@drawable/rectangle_round_corner3_dark_blue"
            android:text="@string/my_class_review"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_join_class"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_16"
            android:background="@drawable/rectangle_round_corner3_dark_blue"
            android:text="@string/my_class_join"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_16"
            android:background="@drawable/rectangle_round_corner3_dark_blue"
            android:text="@string/my_class_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</LinearLayout>